--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
+    "axios": "^0.21.1",
     "d3": "^6.7.0",
     "next": "10.2.0",
     "react": "17.0.2",
+    "react-color": "^2.19.3",
     "react-dom": "17.0.2",
     "react-katex": "^2.0.2",
     "sass": "^1.32.13"
