--- a/server/package.json
+++ b/server/package.json
@@ -4,14 +4,13 @@
   "main": "src/index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon ."
+    "dev": "node ."
   },
   "dependencies": {
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "mongoose": "^5.12.10",
     "mysql": "^2.18.1",
     "uuid": "^8.3.2"
   }
